# openai-translator

./: chapter7-17-homework.md  dev.env  pyproject.toml
ai_translator/: __init__.py  quart_dev.yaml  server.py
ai_translator/backend_db/: __init__.py  sqlitedb.py
ai_translator/chains/: __init__.py  translation_chain.py
ai_translator/config/: config.py
ai_translator/datamodel/: __init__.py  content.py  history.py
ai_translator/model/: api2d_model.py  glm_model.py  model.py  openai_model.py
ai_translator/translator/: pdf_parser.py  pdf_translator.py  writer.py
ai_translator/utils/: __init__.py  model_factory.py
chatglm_server/: chatglm_api.py
config/: __init__.py  config.py
frontend/: __init__.py  frontend.py  requirements.txt  test.py
frontend/.streamlit/: config.toml
frontend/utils/: logger.py
jupyter/: pdfplumber.ipynb
tests/: test_chatglm.py  translations.db
utils/: __init__.py
